# book-bridge

./: .env.example  .flutter-plugins-dependencies  .gitignore  ANTIGRAVITY_BOOKBRIDGE_BRIEF_v2.md  BookBridge_ A Social Venture to End Learning Poverty.md  Brand Identity Guide_ The Visual Language of BookBridge.md  CHANGELOG.md  GEMINI.md  GITHUB_SETUP_INSTRUCTIONS.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  QWEN.md  QWEN_AGENT_PROMPT.md  README.md  SUPABASE_SETUP.md  analysis_output.txt  arb-util  create_github_repo.sh  firebase.json  git_final_out.txt  git_log_final.txt  git_log_now.txt  git_merge_push_log.txt  git_status_debug.txt  git_status_now.txt  pubspec.yaml  search_listings.sql
.github/workflows/: rust.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
assets/: Antigravity_Prompt_BookBridge_Rust_Phase1.md  Antigravity_Prompt_BookBridge_Rust_Phase2.md  BookBridge_v2_Implementation_Plan.md
bookbridge-rust-core/: .env.example  Cargo.toml
bookbridge-rust-core/src/: auth.rs  config.rs  error.rs  fapshi.rs  lib.rs  main.rs
bookbridge-rust-core/src/routes/: escrow.rs  health.rs  mod.rs  webhook.rs
bookbridge-rust-core/tests/: auth_tests.rs  escrow_tests.rs  webhook_tests.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
landingPage/: .env.example  check_db.py  check_supabase_fast.py  check_tx.js  index.html  package-lock.json  package.json
lib/: firebase_options.dart  injection_container.dart  main.dart
supabase/: favorites_migration.sql  feedback_migration.sql
web/: index.html
(+182 files in other folders)
